name:                upload
version:             0.1
synopsis:            An image uploader for the Twitter API
description:         
   .
   A tool to upload photos to Twitter (using the Askitter library)
   .
   Usage: upload --tokenFile FILE STATUS IMAGE
   .
category:            Twitter
stability:           experimental
license:             BSD3
license-file:        LICENSE
author:              Kevin Cantu <me@kevincantu.org>
maintainer:          Kevin Cantu <me@kevincantu.org>
copyright:           (c) 2012 Kevin Cantu
homepage:            https://github.com/killerswan/twitter-upload
bug-reports:         https://github.com/killerswan/twitter-upload/issues
build-type:          Simple
cabal-version:       >=1.8

source-repository head
   type:       git
   location:   https://github.com/killerswan/twitter-upload

executable upload
   main-is:          upload.hs
   hs-source-dirs:   .
   ghc-options:      -Wall -O2
   build-depends:    askitter >= 0.0.1,
                     base,
                     bytestring,
                     split,
                     strptime,
                     text,
                     time

